// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds extra 1`] = `
ModelResponse {
  "data": Object {
    "foo": "bar",
  },
  "name": "modelName",
  "status": "ok",
  "xRequestId": "deadbeef",
}
`;

exports[`creates error response 1`] = `
ModelError {
  "ckey": undefined,
  "error": "error",
  "name": "modelName",
  "status": "error",
}
`;

exports[`creates response 1`] = `
ModelResponse {
  "data": Object {
    "foo": "bar",
  },
  "name": "modelName",
  "status": "ok",
}
`;
